--- a/resources/style.css
+++ b/resources/style.css
@@ -28,3 +28,30 @@ For more information, please refer to <https://unlicense.org>
     Created on : 26 de ago. de 2024, 20:15:55
     Author     : Cien
 */
+h1 {
+    
+}
+h4 {
+    
+}
+h2 {
+    
+}
+h3 {
+    
+}
+.text {
+    
+}
+.fine {
+    
+}
+.warning {
+    
+}
+.severe {
+    
+}
+code {
+    
+}
