--- a/resources/style.css
+++ b/resources/style.css
@@ -28,6 +28,19 @@ For more information, please refer to <https://unlicense.org>
     Created on : 26 de ago. de 2024, 20:15:55
     Author     : Cien
 */
+body {
+    background-color: #3c3f41;
+    color: #a9b7c6;
+    font-family: sans-serif;
+    font-weight: 600;
+}
+header {
+    text-align: center;
+}
+.articleBody {
+    max-width: 800px;
+    margin: 0 auto;
+}
 h1 {
     
 }
@@ -41,17 +54,55 @@ h3 {
     
 }
 .text {
-    
+    font-weight: 300;
 }
 .fine {
-    
+    border-radius: 5px 30px 30px;
+    background-color: #009f00;
+    font-family: sans-serif;
+    box-shadow: 3px 3px 5px black;
+    padding: 1px;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: black;
 }
 .warning {
-    
+    border-radius: 5px 30px 30px;
+    background-color: #b7b700;
+    font-family: sans-serif;
+    box-shadow: 3px 3px 5px black;
+    padding: 1px;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: black;
 }
 .severe {
-    
+    border-radius: 5px 30px 30px;
+    background-color: #9f0000;
+    font-family: sans-serif;
+    box-shadow: 3px 3px 5px black;
+    padding: 1px;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color: black;
 }
-pre {
-    
+.code {
+    color: #cccccc;
+    border-radius: 20px;
+    background-color: black;
+    font-family: monospace;
+    box-shadow: 0px 0px 5px black;
+    padding: 1px;
+    padding-left: 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-shadow: 0px 0px 2px #000000;
+    overflow: auto;
+}
+img {
+    max-width: 800px;
+    max-height: 800px;
 }
