--- a/resources/style.css
+++ b/resources/style.css
@@ -72,7 +72,7 @@ h3 {
     border-radius: 5px 30px 30px;
     background-color: #57db57;
     font-family: sans-serif;
-    box-shadow: 3px 3px 5px black;
+    box-shadow: 0px 0px 5px black;
     padding: 1px;
     padding-left: 30px;
     padding-right: 30px;
@@ -86,7 +86,7 @@ h3 {
     border-radius: 5px 30px 30px;
     background-color: #f0ba3b;
     font-family: sans-serif;
-    box-shadow: 3px 3px 5px black;
+    box-shadow: 0px 0px 5px black;
     padding: 1px;
     padding-left: 30px;
     padding-right: 30px;
@@ -100,7 +100,7 @@ h3 {
     border-radius: 5px 30px 30px;
     background-color: #ec3333;
     font-family: sans-serif;
-    box-shadow: 3px 3px 5px black;
+    box-shadow: 0px 0px 5px black;
     padding: 1px;
     padding-left: 30px;
     padding-right: 30px;
@@ -112,8 +112,8 @@ h3 {
 }
 .code {
     color: #cccccc;
-    border-radius: 20px;
-    background-color: black;
+    border-radius: 1px;
+    background-color: #272822;
     font-family: monospace;
     box-shadow: 0px 0px 5px black;
     padding: 1px;
@@ -121,10 +121,13 @@ h3 {
     padding-right: 15px;
     margin-bottom: 10px;
     margin-top: 10px;
-    text-shadow: 0px 0px 2px #000000;
     overflow: auto;
+    white-space: pre;
 }
 img {
     max-width: 800px;
     max-height: 800px;
+}
+.red {
+    color: red;
 }
