--- a/resources/style.css
+++ b/resources/style.css
@@ -49,6 +49,14 @@ header {
     margin-top: 30px;
     font-size: 75%;
     line-height: 20px;
+    display: block;
+    border-style: inset;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-width: 1px;
+    border-color: #a9b7c6;
+    padding-bottom: 10px;
 }
 a:link {
     color: #a9b7c6;
@@ -79,7 +87,7 @@ h3 {
     margin-bottom: 10px;
     margin-top: 10px;
     color: #e5ffbf;
-    text-shadow: 0px 0px 1px #000000;
+    text-shadow: 0px 0px 2px #000000;
     overflow: auto;
 }
 .warning {
@@ -93,7 +101,7 @@ h3 {
     margin-bottom: 10px;
     margin-top: 10px;
     color: #fffccf;
-    text-shadow: 0px 0px 1px #000000;
+    text-shadow: 0px 0px 2px #000000;
     overflow: auto;
 }
 .severe {
@@ -107,7 +115,7 @@ h3 {
     margin-bottom: 10px;
     margin-top: 10px;
     color: #ffdada;
-    text-shadow: 0px 0px 1px #000000;
+    text-shadow: 0px 0px 2px #000000;
     overflow: auto;
 }
 .code {
