--- a/resources/style.css
+++ b/resources/style.css
@@ -29,89 +29,61 @@ For more information, please refer to <https://unlicense.org>
     Author     : Cien
 */
 .body {
-    background-color: #3c3f41;
-    color: #a9b7c6;
-    font-family: sans-serif;
-    font-weight: 600;
+    
 }
 .header {
+    
+}
+.h1 {
+    
+}
+.h2 {
+    
+}
+.h3 {
     
 }
 .article {
     
 }
 .indices {
-    margin-bottom: 30px;
-    margin-top: 30px;
-    font-size: 75%;
-    line-height: 20px;
-    display: block;
-    border-style: inset;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-width: 1px;
-    border-color: #a9b7c6;
-    padding-bottom: 10px;
+    
 }
 .indexLink:link {
-    color: #a9b7c6;
+    
 }
 .indexLink:visited {
-    color: #a9b7c6;
-}
-.h1 {
-    font-size: 300%;
-}
-.h2 {
-    font-size: 200%;
-}
-.h3 {
-    font-size: 110%;
+    
 }
 .text {
-    font-weight: 300;
+    
+}
+
+.fine .warning .severe {
+    
 }
 .fine {
-    border-radius: 5px 30px 30px;
-    background-color: #57db57;
-    font-family: sans-serif;
-    box-shadow: 0px 0px 3px black;
-    padding: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-shadow: 0px 0px 2px #000000;
+    
 }
 .warning {
-    border-radius: 5px 30px 30px;
-    background-color: #f0ba3b;
-    font-family: sans-serif;
-    box-shadow: 0px 0px 3px black;
-    padding: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-shadow: 0px 0px 2px #000000;
+    
 }
 .severe {
-    border-radius: 5px 30px 30px;
-    background-color: #ec3333;
-    font-family: sans-serif;
-    box-shadow: 0px 0px 3px black;
-    padding: 5px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-shadow: 0px 0px 2px #000000;
+    
 }
+
 .code {
-    color: #cccccc;
-    border-radius: 1px;
-    background-color: #272822;
-    font-family: monospace;
-    box-shadow: 0px 0px 5px black;
-    padding: 10px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    
 }
 .image {
+    
+}
+.footer {
+    
+}
+.footerLink:link {
+    
+}
+.footerLink:visited {
     
 }
