--- a/resources/style.css
+++ b/resources/style.css
@@ -124,7 +124,10 @@ For more information, please refer to <https://unlicense.org>
     box-shadow: 0px 0px 3px black;
 }
 .image {
+    display: block;
     max-width: 800px;
+    width: 100%;
+    height: auto;
 }
 .footer {
     color: black;
