--- a/resources/style.css
+++ b/resources/style.css
@@ -87,34 +87,34 @@ For more information, please refer to <https://unlicense.org>
     text-indent: 2em;
     margin-left: 30px;
     margin-right: 30px;
-    background-color: #57db57;
+    background-color: #4edd61;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px black;
     border-style: solid;
-    border-color: #42a842;
+    border-color: rgb(17, 160, 60);
 }
 .warning {
     text-indent: 2em;
     margin-left: 30px;
     margin-right: 30px;
-    background-color: #f0ad3a;
+    background-color: #ecab32;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px black;
     border-style: solid;
-    border-color: #da8f10;
+    border-color: #d39014;
 }
 .severe {
     text-indent: 2em;
     margin-left: 30px;
     margin-right: 30px;
-    background-color: #ec3333;
+    background-color: rgb(236, 33, 33);
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px black;
     border-style: solid;
-    border-color: #b72727;
+    border-color: #f46969;
 }
 .code {
     color: #eeeeee;
