--- a/resources/style.css
+++ b/resources/style.css
@@ -39,6 +39,9 @@ For more information, please refer to <https://unlicense.org>
 }
 .header {
     text-align: center;
+    max-width: 1000px;
+    justify-content: center;
+    margin: 0 auto;
 }
 .header h2, .header h3 {
     font-size: 90%;
@@ -126,6 +129,16 @@ For more information, please refer to <https://unlicense.org>
     margin-top: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px black;
+}
+.list {
+    color: #eeeeee;
+    text-indent: 0.5em;
+    line-height: 1.35em;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin: 30px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 .code code {
     white-space: pre;
