--- a/resources/style.css
+++ b/resources/style.css
@@ -134,7 +134,6 @@ For more information, please refer to <https://unlicense.org>
     box-shadow: 0px 0px 3px black;
 }
 .list {
-    color: #eeeeee;
     line-height: 1.35em;
     padding-top: 2px;
     padding-bottom: 2px;
@@ -144,6 +143,8 @@ For more information, please refer to <https://unlicense.org>
 }
 .list p {
     margin: 12px;
+    text-align: left;
+    text-justify: none;
 }
 .code code {
     white-space: pre;
