--- a/resources/style.css
+++ b/resources/style.css
@@ -115,8 +115,8 @@ For more information, please refer to <https://unlicense.org>
     border-color: #d39014;
 }
 .severe {
-    background-color: #b71919;
-    border-color: #880b0b;
+    background-color: #e02323;
+    border-color: #a50d0d;
 }
 .code {
     color: #eeeeee;
