--- a/resources/style.css
+++ b/resources/style.css
@@ -43,7 +43,7 @@ For more information, please refer to <https://unlicense.org>
     justify-content: center;
     margin: 0 auto;
 }
-.header h2, .header h3 {
+.header h2, .header h3, .header h4 {
     font-size: 90%;
 }
 .article, .articles {
@@ -61,6 +61,7 @@ For more information, please refer to <https://unlicense.org>
     margin-bottom: 40px;
 }
 .article h3 {
+    text-indent: 0.5em;
     line-height: 1.65em;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -100,7 +101,7 @@ For more information, please refer to <https://unlicense.org>
     margin-right: 30px;
     color: #000000;
     background-color: #4edd61;
-    padding: 15px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 3px black;
     border-style: solid;
