--- a/data/style.css
+++ b/data/style.css
@@ -139,8 +139,11 @@ For more information, please refer to <https://unlicense.org>
     margin: 0;
     margin-bottom: 10px;
     margin-top: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0px 0px 3px black;
+}
+.code code {
+    color: #8cc4ff;
 }
 .list {
     line-height: 1.35em;
