Testing xml stylesheets

--- a/schemas/styles/testXmlStyle.css
+++ b/schemas/styles/testXmlStyle.css
@@ -15,3 +15,4 @@ i {font-style: italic;}
 u {text-decoration: underline;}
 s {text-decoration: line-through;}
 sans {font-family: sans-serif;}
+serif {font-family: serif;}
